sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:58: error: ')' expected but 'if' found.
  if (getCouleurJoueur(result, 0)==base) {
  ^